--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "i18next": "^21.6.14",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.0",
     "yup": "^0.32.11"
   }
