--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist\n\tNODE_ENV=production npx webpack"
   },
   "repository": {
     "type": "git",
