--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "Hexlet-frontend-project-lvl3",
-  "main": "./src/index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "build": "rm -rf dist\n\tNODE_ENV=production npx webpack"
